[gd_scene load_steps=8 format=2]

[ext_resource path="res://img/cat.png" type="Texture" id=1]
[ext_resource path="res://entities/hero.gd" type="Script" id=2]
[ext_resource path="res://obj/movables/movable.tscn" type="PackedScene" id=3]
[ext_resource path="res://img/light.png" type="Texture" id=4]
[ext_resource path="res://ui/4_directions_swipe_handler.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="OccluderPolygon2D" id=2]
cull_mode = 2
polygon = PoolVector2Array( -10, -16, -10, 4, -6, 4, -6, 8, -10, 8, -10, 12, -6, 12, -6, 16, -2, 16, -2, 12, 2, 12, 2, 16, 6, 16, 6, 12, 10, 12, 10, 8, 6, 8, 6, 4, 10, 4, 10, -16, 6, -16, 6, -12, 2, -12, 2, -8, -2, -8, -2, -12, -6, -12, -6, -16 )

[node name="Hero" instance=ExtResource( 3 )]
collision_layer = 1
script = ExtResource( 2 )
can_be_pushed = false

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="3"]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="." index="4"]
texture = ExtResource( 4 )
texture_scale = 0.3

[node name="LightOccluder2D" type="LightOccluder2D" parent="." index="5"]
show_behind_parent = true
occluder = SubResource( 2 )

[node name="Control" type="Node" parent="." index="6"]
script = ExtResource( 6 )

[connection signal="swiped_down" from="Control" to="." method="move_down"]
[connection signal="swiped_left" from="Control" to="." method="move_left"]
[connection signal="swiped_right" from="Control" to="." method="move_right"]
[connection signal="swiped_up" from="Control" to="." method="move_up"]
